--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
     "firebase": "^9.22.0",
+    "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
-    "passport": "^0.5.3",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
 }
